--- a/Bootstrap/assets/css/custom.css
+++ b/Bootstrap/assets/css/custom.css
@@ -36,7 +36,7 @@ body {
 	background: white;
 	height: 2px;
 	width: 0%;
-	transition: .15s ease;
+	transition: .35s ease;
 	transform: translateX(-50%);
 	bottom: 0;
 	left: 50%;
@@ -45,7 +45,7 @@ body {
 
 .menu-link a:hover {
 	color: orange;
-	transition: .15s ease;
+	transition: .35s ease;
 }
 
 .menu-link a:hover:after, .menu-link a:focus:after, .menu-link a:active:after {
@@ -83,6 +83,20 @@ body {
 
 
 
+/* OVERLAY */
+.overlay {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: lightgreen;
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity .35s, visibility .35s;
+}
+
+
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
@@ -90,6 +104,10 @@ body {
 @media (max-width: 768px) { 
 	.navbar-custom {
 		display: none;
+	}
+	.overlay {
+		opacity: 0.9;
+		visibility: visible;
 	}
 }
 
