--- a/Bootstrap/assets/css/custom.css
+++ b/Bootstrap/assets/css/custom.css
@@ -22,7 +22,7 @@ body {
 
 
 
-/* A LINKS */
+/* MAIN MENU A.LINKS */
 .menu-link a, .menu-link a:visited {
 	color: black;
 	text-decoration: none;
@@ -83,6 +83,54 @@ body {
 
 
 
+/* MENU BUTTON */
+.menu-button {
+	width: 35px;
+	height: 35px;
+	color: black;
+	cursor: pointer;
+	position: fixed;
+	top: 5%;
+	right: 5%;
+	z-index: 100;
+	visibility: hidden;
+	transition: opacity .35s;
+}
+.menu-button:hover {
+	opacity: 0.7;
+}
+.menu-button span {
+	background: black;
+	border: none;
+	height: 5px;
+	width: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0;
+	transition: transform .35s ease;
+	cursor: pointer;
+}
+.menu-button span:nth-of-type(2) {
+	top: 10px;
+}
+.menu-button span:nth-of-type(3) {
+	top: 20px;
+}
+.active .top {
+	transform: translateY(10px) translateX(0) rotate(45deg);
+	background-color: black;
+}
+.active .middle {
+	opacity: 0;
+	background-color: black;
+}
+.active .bottom {
+	transform: translateY(-10px) translateX(0) rotate(-45deg);
+	background-color: black;
+}
+
+
+
 /* OVERLAY */
 .overlay {
 	position: fixed;
@@ -94,7 +142,36 @@ body {
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity .35s, visibility .35s;
+	overflow: hidden;
 }
+.overlay-menu {
+	position: relative;
+	height: 70%;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 50px;
+	text-align: center;
+}
+.overlay-menu ul {
+    padding: 0;
+    margin: 0 auto;
+    display: inline-block;
+    position: relative;
+    height: 100%;
+}
+.overlay-menu ul li {
+	/* display: inline-block;   [turn on for horizontal menu] */
+    display: block;
+    height: 25%;
+    height: calc(100%/4);
+    min-height: 50px;
+    position: relative;
+}
+.overlay-open {
+	opacity: 0.9;
+	visibility: visible;
+}
+
 
 
 /* Extra small devices (phones, less than 768px) */
@@ -105,8 +182,7 @@ body {
 	.navbar-custom {
 		display: none;
 	}
-	.overlay {
-		opacity: 0.9;
+	.menu-button {
 		visibility: visible;
 	}
 }
