--- a/Bootstrap/assets/css/custom.css
+++ b/Bootstrap/assets/css/custom.css
@@ -1,17 +1,54 @@
 /* UTILITY STYLES */
-body {
+body, html {
+  height: 100%;
+  width: 100%;
+}
+
+header {
 	background-image: url("../img/splash-sunset.JPG");
 	background-size: cover;
+	height: 100%;
 }
-header {
+
+#hero {
+	height: 100%;
+	width: 100%;
 	background-color: yellow;
 }
+
+.hero-div {
+	background-color: pink;
+	height: 100%;
+}
+
+
+
+
+/**/
+.test-container {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.test {
+  display: table-cell;
+  vertical-align: middle;
+  background-color: red;
+  height: 100%;
+  text-align: center;
+}
+/**/
+
+
 
 .container {
 	background-color: lightblue;
 }
 .center {
 	text-align: center;
+}
+.hide {
+	visibility: hidden;
 }
 
 
